--- a/404.html
+++ b/404.html
@@ -77,8 +77,8 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
+          <p> <i class="fas fa-phone"></i>+91 7798545868</p>
+          <p> <i class="fas fa-envelope"></i>dhirajnimbalkar142@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
           <div class="share">
 
