--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hi There,<br/> I'm Jigar <span>Sable</span></h2>
+    <h2>Hi There,<br/> I'm Dhiraj <span>Nimbalkar</span></h2>
     <p>i am into <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
@@ -80,7 +80,7 @@
     </div>
     <div class="content">
         <h3>I'm Jigar</h3>
-        <span class="tag">Full Stack Developer</span>
+        <span class="tag">Devops Engineer</span>
         
         <p>I am a Full-Stack developer based in Pune, India. 
           I am an Information Technology undergraduate from SPPU.
