--- a/experience/index.html
+++ b/experience/index.html
@@ -33,7 +33,7 @@
 <!-- navbar ends -->
 
 <!-- experience section starts -->
-<section class="experience" id="experience">
+<!-- <section class="experience" id="experience">
 
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
   <div class="quote">
@@ -48,8 +48,8 @@
           <h2>Self Employed</h2>
         </div>
         <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
+            <h3>Devops Engineer</h3>
+            <p>jan 2025 - present</p>
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
   </div>
 
 </div>
-</section>
+</section> -->
 <!-- experience section ends -->
 
 <!-- footer section starts -->
@@ -190,16 +190,16 @@
           <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
           <div class="share">
 
-            <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-            <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
-            <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/dhiraj-nimbalkar-67ba2926a" class="fab fa-linkedin" target="_blank"></a>
+            <a href="https://github.com/DhirajNimbalkar001 " class="fab fa-github" target="_blank"></a>
+            <a href="mailto:dhirajnimbalkar410@gmail.com" class="fas fa-envelope" target="_blank"></a>
+            <!--<a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a> -->
+             <!--<a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>-->
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/dhiraj-nimbalkar-67ba2926a"> Dhiraj Nimbalkar</a></h1>
 
 </section>
 <!-- footer section ends -->
