--- a/experience/index.html
+++ b/experience/index.html
@@ -15,7 +15,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Dhiraj</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -25,7 +25,7 @@
             <li><a href="/#skills">Skills</a></li>
             <li><a href="/#education">Education</a></li>
             <li><a href="/#work">Work</a></li>
-            <li><a class="active" href="/#experience">Experience</a></li>
+            <!--<li><a class="active" href="/#experience">Experience</a></li> -->
             <li><a href="/#contact">Contact</a></li>
             </ul>
         </nav>
@@ -180,7 +180,7 @@
           <a href="/#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
           <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a>
           <a href="/#work"><i class="fas fa-chevron-circle-right"></i> work</a>
-          <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
+         <!-- <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a> -->
       </div>
 
       <div class="box">
